COLAB-1968 fixes for scrollbar display in user terms modal window

--- a/view/src/main/resources/static/sass/partials/components/_c-Popup.scss
+++ b/view/src/main/resources/static/sass/partials/components/_c-Popup.scss
@@ -23,6 +23,25 @@ $c-Popup__close__background--hover: url(/images/x.png) no-repeat left bottom !de
   }
 }
 
+#termsScroll::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+#termsScroll::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+#termsScroll::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+}
 .c-Popup { //.popup
   position: relative;
   padding: 30px 30px 32px 30px;
